--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "benchmark": ">=2",
     "chai": ">=4.3",
     "choma": ">= 1.2",
+    "cmake-ts": "^0.3.0",
     "deasync": "^0.1.28",
     "eslint-config-atomic": "^1.18.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -82,6 +83,84 @@
     "test": "npm run build.debug && mocha",
     "lint": "sh script/lint.sh",
     "bench": "node --expose-gc test/bench"
+  },
+  "cmake-ts": {
+    "globalCMakeOptions": [
+      {
+        "name": "CMAKE_EXPORT_COMPILE_COMMANDS",
+        "value": "1"
+      }
+    ],
+    "nodeAPI": "node-addon-api",
+    "configurations": [
+      {
+        "name": "linux-x64",
+        "dev": true,
+        "os": "linux",
+        "arch": "x64",
+        "runtime": "node",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "win-x64",
+        "dev": true,
+        "os": "win32",
+        "arch": "x64",
+        "runtime": "node",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "macos-x64",
+        "dev": true,
+        "os": "darwin",
+        "arch": "x64",
+        "runtime": "node",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "macos-arm64",
+        "dev": true,
+        "os": "darwin",
+        "arch": "arm64",
+        "runtime": "node",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "linux-x64",
+        "dev": true,
+        "os": "linux",
+        "arch": "x64",
+        "runtime": "electron",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "win-x64",
+        "dev": true,
+        "os": "win32",
+        "arch": "x64",
+        "runtime": "electron",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "macos-x64",
+        "dev": true,
+        "os": "darwin",
+        "arch": "x64",
+        "runtime": "electron",
+        "runtimeVersion": "14.20.0"
+      },
+      {
+        "name": "macos-arm64",
+        "dev": true,
+        "os": "darwin",
+        "arch": "arm64",
+        "runtime": "electron",
+        "runtimeVersion": "14.20.0"
+      }
+    ],
+    "targetDirectory": "build",
+    "buildType": "Release",
+    "projectName": "addon"
   },
   "keywords": [
     "zeromq",
