--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,6 +68,15 @@ jobs:
             cpp_arch: x64
             zmq_draft: false
 
+          - os: ubuntu-22.04
+            docker: node:20-alpine
+            docker_cmd: apk add --no-cache pkgconfig curl tar python3 make gcc g++ cmake musl-dev && npm i -g pnpm && pnpm install && pnpm run prebuild
+            node_version: 20
+            node_arch: x64
+            ARCH: arm64
+            cpp_arch: amd64_arm64
+            zmq_draft: false
+
     env:
       ZMQ_DRAFT: ${{ matrix.zmq_draft }}
       ZMQ_SHARED: false
