--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,49 +31,49 @@ jobs:
           - ""
 
         include:
-          - os: windows-2022
-            node_version: 20
-            node_arch: x86
-            ARCH: x86
-            cpp_arch: amd64_x86
-            zmq_draft: false
-
-          # - os: windows-2022
-          #   node_version: 20
-          #   node_arch: x64
-          #   ARCH: arm64
-          #   cpp_arch: amd64_arm64
-          #   zmq_draft: false
-
-          - os: macos-13
-            node_version: 20
-            node_arch: x64
-            ARCH: x86_64
-            cpp_arch: x64
-            zmq_draft: false
-
-          - os: macos-13
-            node_version: 20
-            node_arch: x64
-            ARCH: arm64
-            cpp_arch: amd64_arm64
-            zmq_draft: false
-
-          - os: ubuntu-22.04
-            docker: node:20-alpine
-            docker_cmd: apk add --no-cache pkgconfig curl tar python3 make gcc g++ cmake musl-dev && npm i -g pnpm && pnpm install && pnpm run prebuild
-            node_version: 20
-            node_arch: x64
-            ARCH: x64
-            cpp_arch: x64
-            zmq_draft: false
-
-          - os: ubuntu-22.04
-            node_version: 20
-            node_arch: x64
-            ARCH: arm64
-            cpp_arch: amd64_arm64
-            zmq_draft: false
+#          - os: windows-2022
+#            node_version: 20
+#            node_arch: x86
+#            ARCH: x86
+#            cpp_arch: amd64_x86
+#            zmq_draft: false
+#
+#          # - os: windows-2022
+#          #   node_version: 20
+#          #   node_arch: x64
+#          #   ARCH: arm64
+#          #   cpp_arch: amd64_arm64
+#          #   zmq_draft: false
+#
+#          - os: macos-13
+#            node_version: 20
+#            node_arch: x64
+#            ARCH: x86_64
+#            cpp_arch: x64
+#            zmq_draft: false
+#
+#          - os: macos-13
+#            node_version: 20
+#            node_arch: x64
+#            ARCH: arm64
+#            cpp_arch: amd64_arm64
+#            zmq_draft: false
+#
+#          - os: ubuntu-22.04
+#            docker: node:20-alpine
+#            docker_cmd: apk add --no-cache pkgconfig curl tar python3 make gcc g++ cmake musl-dev && npm i -g pnpm && pnpm install && pnpm run prebuild
+#            node_version: 20
+#            node_arch: x64
+#            ARCH: x64
+#            cpp_arch: x64
+#            zmq_draft: false
+#
+#          - os: ubuntu-22.04
+#            node_version: 20
+#            node_arch: x64
+#            ARCH: arm64
+#            cpp_arch: amd64_arm64
+#            zmq_draft: false
 
           - os: ubuntu-22.04
             docker: node:20-alpine
