--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os:
           - ubuntu-22.04
-          - windows-2022
+      #    - windows-2022
         node_version:
           - 20
         node_arch:
