--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,11 +79,21 @@ jobs:
             docker: node:20-alpine
             docker_arch: linux/amd64
             docker_cmd: apk add --no-cache pkgconfig curl tar python3 make gcc g++ cmake musl-dev && npm i -g pnpm && pnpm install && pnpm run prebuild
+            node_version: 20
+            node_arch: amd64
+            ARCH: x64
+            cpp_arch: x64
+            zmq_draft: false
 
           - os: ubuntu-22.04
             docker: node:20-alpine
             docker_arch: linux/arm64
             docker_cmd: apk add --no-cache pkgconfig curl tar python3 make gcc g++ cmake musl-dev && npm i -g pnpm && pnpm install && pnpm run prebuild
+            node_version: 20
+            node_arch: arm64
+            ARCH: arm64
+            cpp_arch: amd64_arm64
+            zmq_draft: false
 
 
     env:
